# crud_web

./: Cargo.toml
migrations/2021-09-28-192330_create_user/: up.sql
src/: main.rs  schema.rs
src/controllers/: error.rs  landing.rs  mod.rs  users.rs
src/database/: mod.rs
src/models/user/: user.rs
static/css/: custom.css
static/html/: 404.html  register.html
