[package]
name = "crud_web"
version = "0.1.0"
authors = ["MrDahaniel <danieldavid2001@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-web = "3"
actix-files = "0.5.0"
actix-rt = "2.2.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

chrono = "0.4"

diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"